# kursovaya

./: .env  .env.example  Makefile  README.md  REPORT.md  bot.db  main.py  pyproject.toml
bot/: keyboards.py  states.py
bot/handlers/: start.py  stats.py  tasks.py
core/: config.py
db/: base.py  models.py  repository.py
pdf/: generator.py
tasks/: checker.py  generator.py
tests/: test_checker.py  test_generator.py
